@@ -27,7 +27,7 @@
 #include <vector>
 //-----------------------------------------------------------------------------
 /// Class for working with data array
-#ifdef MGL_NO_DATA_A
+#if MGL_NO_DATA_A
 class mglData
 #else
 class mglData : public mglDataA
@@ -377,7 +377,7 @@ public:
 	inline mreal &operator[](long i)	{	return a[i];	}
 	// NOTE see 13.10 for operator(), operator[] -- m.b. I should add it ???
 #endif
-#ifdef MGL_NO_DATA_A
+#if MGL_NO_DATA_A
 	inline long GetNN() const {	return nx*ny*nz;	}
 #else
 protected:
